0.5.2 - "fluffy little fellow"

* Implemented timestamping for quicklog events (QLOGSTAMP).
  Option in miaurc: "timestamp", defines location of timestamp in quicklog
  events. May be one of "beginning", "end", or "none".

* "getnick" option (in miaurc) now takes "never", "detached", "attached" and
  "always" as an argument.

* Some parts of parser.c rewritten.


0.5.1 - "y2k-compatible"

* Quitting miau resulted in deadlock when logging was compiled in but not
  defined in miaurc. Fixed.

* miau no longer tries to join channels when not connected.
  (There was one occasion this check wasn't done...)

* When randomized nick was in use, error message told
  "Nick 'foobar' unavailable - using 'foobar^^" while miau had nick
  'foobar^'. Fixed.

* Away-status is now set and unset properly. miau used to set/unset
  away-status even when it was not needed.

* Empty away-message ("AWAY :") is now, by default, understood as "remove
  AWAY message". Empty AWAY messages can be allowed by giving
  --enable-empty-awaymsg (EMPTYAWAY) to configure-script.

* If user is marked as being away, new client is told about this. Some IRC-
  clients like irssi won't even try to remove away-status unless they think
  user is away. This fixes this issue.

* No more detectable (not even those static) memory leaks!

* Number of connected clients is now both reported to clients and written
  into log when number changes (and if more than one client is allowed).
  Message order is also sensible now, first we tell what happened, then the
  number of connected clients.

* When user issues DIE-command, reason is echoed to all clients.

* PINGSTAT and DUMP are also listed in list of miau's commands.

* miau no longer catches SIGKILL.

* Added Sebastian Kienzl and Lee Hardy into copyright-part of client.c and
  server.c from where they were left out when miau.c got splitted.

* Minor code clean-ups.


0.5.0-mk2 - "Mark 2"

* STATUSDUMP now dump to clients as well.
